--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <script src="rps.js"></script>
     
-    <input type = "text" placeholder = "Type Rock/Paper/Scissors" id = "playerInput">
-    <button type = "button" onclick = "playRound();"> Play Round </button>
+    <button type = "button" onclick = "playRound('Rock');" id = "Rock" value = "Rock">Rock</button>
+    <button type = "button" onclick = "playRound('Paper');" id = "Paper" value = "Paper">Paper</button>
+    <button type = "button" onclick = "playRound('Scissors');" id = "Scissors" value = "Scissors">Scissors</button>
 
 
 </body>
