Added a scoring mechanic along with a way to start a new round

--- a/index.html
+++ b/index.html
@@ -30,5 +30,23 @@
         <div class="result" id="result"> </div>
     </div>
 
+    <div class="score-board-container">    
+        <div class="score-board">    
+            <div class="score-board-scores">
+                <div class="player" id="player-lives"></div>
+                <div class="computer" id="computer-lives"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class ="new-round-container" id="round-container" style="display: none;">
+        <div class ="play-again">Would you like to play again?</div>
+        <div class ="new-round-button">
+            <button type ='button' onclick = "newRound()">New Round</button>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
